Interrupted charged smash attack removed
No more shield broken Rosa using Luma Uair on someone charging a smash attack lol
Deep Breathing max damage multiplier changed

--- a/percentcalc.html
+++ b/percentcalc.html
@@ -354,7 +354,7 @@
                         <select id="target-status" ng-model="kb_modifier" ng-change="update()">
                             <option value="none">None</option>
                             <option value="crouch">Crouch cancel</option>
-                            <option value="charging">Interrupted charged smash attack</option>
+                            <!--<option value="charging">Interrupted charged smash attack</option>-->
                             <option value="buried">Buried</option>
                         </select>
                     </div>
