Hitlag formula? and reverted launch speed calculations
Not sure but seems accurate based on various calculations and observations from gameplay

--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
                                 Decay
                             </td>
                             <td>
-                                <input name="param_decay" type="number" min="0" max="999" step="0.01" ng-model="params.test.decay" ng-change="updateParameters()" />
+                                <input name="param_decay" type="number" min="0" max="999" step="0.01" ng-model="params.decay" ng-change="updateParameters()" />
                             </td>
                         </tr>
                     </table>
